module(name = "cc_e2e")

# BEGIN BAZEL_DEP
bazel_dep(name = "rules_img")
local_path_override(
    module_name = "rules_img",
    path = "../..",
)

bazel_dep(name = "rules_img_pull_tool")
local_path_override(
    module_name = "rules_img_pull_tool",
    path = "../../pull_tool",
)

bazel_dep(name = "rules_img_tool")
local_path_override(
    module_name = "rules_img_tool",
    path = "../../img_tool",
)

register_toolchains("@rules_img_tool//toolchain:all")
# END BAZEL_DEP

bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "platforms", version = "0.0.11")

bazel_dep(name = "rules_cc", version = "0.2.16", dev_dependency = True)

# All of the hermetic C++ toolchain setup is done in a separate MODULE.bazel file.
# This setup is not important for the e2e tests and it is hard to read.
include("//:toolchain.MODULE.bazel")

pull = use_repo_rule("@rules_img//img:pull.bzl", "pull")

pull(
    name = "distroless_cc",
    digest = "sha256:2575808fe33e2a728348040ef2fd6757b0200a73ca8daebd0c258e2601e76c6d",
    registry = "gcr.io",
    repository = "distroless/cc-debian12",
    tag = "nonroot",
)
