load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@rules_img//img:image.bzl", "image_index", "image_manifest")
load("@rules_img//img:layer.bzl", "image_layer")
load("@rules_img//img:push.bzl", "image_push")

alias(
    name = "base",
    actual = select({
        "@platforms//os:windows": "@nanoserver",
        "//conditions:default": "@distroless_static",
    }),
)

write_file(
    name = "layer_content",
    out = "file.txt",
    content = ["Hello, World!"],
)

image_layer(
    name = "layer",
    srcs = {"file.txt": ":layer_content"},
)

image_manifest(
    name = "image",
    base = ":base",
    layers = [":layer"],
)

image_index(
    name = "index",
    manifests = [":image"],
    platforms = [
        "//platform:linux_amd64",
        "//platform:linux_arm64",
        "//platform:windows_amd64",
    ],
)

image_push(
    name = "push",
    image = ":index",
    registry = "ghcr.io",
    repository = "malt3/rules_img/index_with_selected_base",
)

build_test(
    name = "test",
    targets = [
        ":layer",
        ":image",
        ":index",
        ":push",
    ],
)
