package(
    default_visibility = ["//visibility:public"],
)

platform(
    name = "linux_amd64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

platform(
    name = "linux_arm64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
)

platform(
    name = "windows_amd64",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
)

# define a platform for the container runtime on your host.
# It uses the same CPU architecture as Bazel itself (i.e. arm64 on an Apple Silicon Mac), but always target Linux.
platform(
    name = "host_docker_platform",
    constraint_values = ["@platforms//os:linux"],
    parents = ["@platforms//host"],
)
