load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "protohelper",
    srcs = ["protohelper.go"],
    importpath = "github.com/bazel-contrib/rules_img/img_tool/pkg/auth/protohelper",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/auth/credential",
        "//pkg/auth/grpcheaderinterceptor",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)

go_test(
    name = "protohelper_test",
    srcs = ["protohelper_test.go"],
    embed = [":protohelper"],
)
